--- a/Sunduk.PWA/Components/ChamferComponent.razor
+++ b/Sunduk.PWA/Components/ChamferComponent.razor
@@ -114,7 +114,7 @@
             </div>
         </MudHidden>
         <MudItem xs="12" sm="12">
-            <MudField Label="Расчет" Variant="Variant.Filled" DisableUnderLine="true">
+            <MudField Label="Расчет" Variant="Variant.Filled" DisableUnderLine="true" Class="mt-n3">
                 <MudGrid Spacing="1">
                     <MudHidden Breakpoint="Breakpoint.Xs">
                         <MudItem xs="12" sm="6" Class="mt-2">
@@ -140,7 +140,7 @@
                 </MudGrid>
             </MudField>
         </MudItem>
-        <MudItem xs="12" sm="12">
+        <MudItem xs="12">
             <MudField Label="Результат" Variant="Variant.Filled" DisableUnderLine="true">
                 <MudGrid Spacing="1">
                     <MudItem xs="12" Class="mt-2">
